@@ -1,3 +1,8 @@
+2008-02-01  Christian Persch  <chpe@gnome.org>
+
+	* src/backend/debug.h: Use G_STRFUNC instead of the deprecated
+	G_GNUC_PRETTY_FUNCTION.
+
 2008-01-31  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-resources.c: (time_monitor):
